[gd_scene load_steps=4 format=3 uid="uid://dqojp2t7bfo6w"]

[ext_resource type="Script" uid="uid://ccp107sv3ahfx" path="res://Components/General/GamePauseController.gd" id="1_vtmej"]

[sub_resource type="Gradient" id="Gradient_03owx"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.4)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wkp8b"]
gradient = SubResource("Gradient_03owx")

[node name="PauseController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vtmej")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_wkp8b")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Game Paused"

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to desktop"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.418403
anchor_top = 0.0478395
anchor_right = 0.576389
anchor_bottom = 0.0756173
offset_right = 1.0
offset_bottom = 40.0
alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sensibilidade do mouse"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonLess" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "-"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "0.35"

[node name="ButtonMore" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonLess" to="." method="_on_button_less_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonMore" to="." method="_on_button_more_pressed"]
